--- a/src/components/style.css
+++ b/src/components/style.css
@@ -12,7 +12,7 @@
 }
 .header{
     grid-area: header;
-    background: #333;
+    background: #47534a;
     color: white;
     display: flex;
     align-items: center;
@@ -59,7 +59,7 @@
 
 .footer {
     grid-area: footer;
-    background: #333;
+    background: #798e8a;
     color: white;
     text-align: center;
     line-height: 60px;
